# PlusModelCatalog

./: .readthedocs.yaml  CMakeLists.txt  CatalogContents.cmake  CatalogHtmlWriterMacros.cmake  README.md
Anatomy/: catalog.json
Tools/: catalog.json
TrackingFixtures/: Ascension800Holder_ThreeHolesSide.SLDPRT  Ascension800Holder_ThreeHolesSide.STL  Ascension800Holder_ThreeHolesUp.SLDPRT  Ascension800Holder_ThreeHolesUp.STL  Block4x4-ThreeHoles.SLDPRT  Block4x4-ThreeHoles.STL  CandyCaneNeedleBase.SLDPRT  CandyCaneNeedleBase.STL  CandyCaneNeedleMarker.SLDPRT  CandyCaneNeedleMarker.STL  Medtronic_PN9733157_Marker.SLDPRT  Medtronic_PN9733157_Marker.STL  PolarisMarker1.SLDPRT  SensorHolder_1.0.SLDPRT  Telemed-MicrUs-L12-SensorHolder.SLDASM  Telemed-OldC5-Clip.SLDPRT  Telemed-OldC5-Concept.SLDASM  UsCalibration10cm.f3d  UsCalibrationStylus10cm.stl  UsCalibrationStylusMarker.stl  catalog.json
TrackingFixtures/GE_ML6-15-D/: GeMl615D_Clip_v01.SLDPRT  GeMl615D_Clip_v01.STL
TrackingFixtures/OptiTrack/: Marker_Stylus-OptiTrack.SLDPRT  Marker_Ultrasound-OptiTrack.SLDPRT
TrackingFixtures/OpticalMarkerTracker/: Marker-80.SLDPRT  Marker-80.STL
TrackingFixtures/Print_Telemed-OldC5-Polaris/: ArmL-30.STL  PolarisMarker1.STL  Telemed-OldC5-Clip.STL
TrackingFixtures/StealthStation/: ArmL-30.SLDPRT  ArmL-30.STL  Marker_Peg-Insert-OptiTrack.SLDPRT  Reference.SLDPRT  StylusMarker2.SLDPRT  StylusMarker2.STL  Stylus_Polaris.SLDPRT  Stylus_Polaris.STL  Ultrasound_Polaris.SLDPRT  Ultrasound_Polaris.STL
TrackingFixtures/Telemed-MicruUs-C5/: Telemed-C5-2R60S.SLDPRT  Telemed-C5-Brace.SLDPRT  Telemed-C5-Brace.STL
TrackingFixtures/Telemed-MicruUs-L12/: Telemed-L12-ClipOn.SLDPRT  Telemed-L12-ClipOn.STL
UsNeedleTutor/: LuerMale.SLDPRT  LuerMale.STL  NeedleMarker.SLDPRT  NeedleMarker.STL  PhantomFrame.SLDPRT  PhantomFrame.STL  Reference.SLDPRT  Reference.STL  UltrasoundLinear.SLDPRT  UltrasoundLinear.STL  UltrasoundMarker.SLDPRT  UltrasoundMarker.STL  catalog.json
docs/: .gitignore  MIGRATION.md  QUICKSTART.md  build.bat  build.sh  conf.py  generate_catalog.py  index.md  render_stl.py  requirements.txt
docs/_static/css/: custom.css
fCalPhantom/: catalog.json
fCalPhantom/fCal_Echo/: PhantomDefinition_fCal_Echo1.0_Wiring_1.0.xml  description.txt
